Fix: Resolve Interval Edge Case, Console Errors & Alignment Issues (#19)
* Handled edge case of interval calculation and fixed invalid prop console error

* x-axis labels aligned centrally

* resolved type issue related to custom style

* implemented a better solution to align x-axis labels centrally

* updated storybook data

* center align x-axis markings

* Allow value box to take height on context instead of fixed height

* updated testcase

--- a/src/scatter-graph/styles.css
+++ b/src/scatter-graph/styles.css
@@ -20,10 +20,14 @@
   display: flex;
 }
 
+.xPointsLabel {
+  transform: translateX(-50%);
+}
+
 .xPoints {
   position: absolute;
   line-height: 16px;
-  text-align: right;
+  text-align: center;
 }
 
 .xPoints::before {
@@ -34,11 +38,11 @@
   background-color: #9e9e9e;
   position: relative;
   top: -8px;
-  left: 10px;
+  left: -0.5px;
 }
 
 .yPointsContainer {
-  padding-right: 6px;
+  padding: 0 6px 0 8px;
 }
 
 .yPoints {
@@ -60,17 +64,15 @@
 }
 
 .valueBox {
-  height: 40px;
   border: 1px solid gray;
   border-radius: 5px;
   background-color: white;
   box-shadow: 3px 3px 4px 0px rgba(189, 189, 189, 1);
   transition: all 0.5s ease;
-  padding: 4px 10px;
+  padding: 5px 10px;
 }
 
 .valueBoxTest {
-  height: 40px;
   border: 1px solid gray;
   border-radius: 5px;
   background-color: white;
